r154 - october, 3, 2009
    * membre : security.yml > edit and show credentials have been documented
    * /apps/front/lib/form/ForgottenPasswordForm : new class
    * association : actions > new action Forgottenpassword
    * association : templates > loginSuccess.php > link if forgotten password
    * StringTools : new method generatePassword()
    * /lib/misc/MailerFactory.class.php : new class to generate swift object
    * association : actions > executeMailing > use new mailer factory class
    * membre : actions > index > redirect to show if we don't have access to
      index
    

r153 - october, 3, 2009
    * membre : security.yml > removed credential auto-checking for edit and show
    * membre : actions > edit and show actions are available for the user
    * membrePeer.php : new const IS_PENDING
    * association : actions > login > redirect to user profile if he can't list
      the members (default homepage)


r152 - october, 3, 2009
    * /web/css : new 'browse' button
    

r151 - october, 3, 2009
    * membre : templates > _form > custom 'browse' button


r150 - october, 3, 2009
    * association : actions > logout > redirect to homepage
    * association : templates > loginSuccess.php > new welcome message


r149 - october, 3, 2009
    * activite : templates > indexSuccess.php > delete link is displayed, 
      warning message is up date
    

r148 - october, 3, 2009
    * membre : templates > showSuccess.php > email is crypted thanks to mail
      helper
    * membre : templates > indexSuccess.php > email is crypted thanks to mail
      helper


r147 - october, 31, 2009
    * compte : actions > default values are set when required
    * compte : templates > showSuccess.php > display a message if no update has
      been done yet
    * compteForm : initialize 'mis_a_jour_par' only if object already exists
    

r146 - october, 31, 2009
    * activite : actions > index, show > uses the new myUser method